--- a/configure.in
+++ b/configure.in
@@ -1,9 +1,21 @@
+dnl Process this file with autoconf to create configure.
 AC_INIT(ltmain.sh.in)
-AM_INIT_AUTOMAKE(libtool, 0.9c)
+AM_INIT_AUTOMAKE(libtool,0.9d)
 
 pkgdatadir='${datadir}/libtool'
 AC_SUBST(pkgdatadir)
 aclocaldir='${datadir}/aclocal'
 AC_SUBST(aclocaldir)
 
+dnl Use the specified CC, RANLIB, and LD while running ltconfig.
+AC_PROG_CC
+AC_PROG_RANLIB
+LD="${LD-ld}"
+AC_SUBST(LD)
+
 AC_OUTPUT([Makefile doc/Makefile tests/Makefile])
+
+# Local Variables:
+# mode:shell-script
+# sh-indentation:2
+# End:
