--- a/ltmain.sh.in
+++ b/ltmain.sh.in
@@ -155,13 +155,16 @@ if test -z "$show_help"; then
     *rm)
       mode=uninstall
       ;;
+    *.la)
+      mode=dlname
+      ;;
     *)
       # Just use the default operation mode.
       if test "$mode" = NONE; then
 	if test -n "$nonopt"; then
-	  echo "$progname: warning: cannot infer operation mode from \`$nonopt $@'" 1>&2
+	  echo "$progname: warning: cannot infer operation mode from \`$nonopt'" 1>&2
 	else
-	  echo "$progname: warning: cannot infer operation mode from no MODE-ARGS" 1>&2
+	  echo "$progname: warning: cannot infer operation mode without MODE-ARGS" 1>&2
 	fi
       fi
       ;;
@@ -176,6 +179,7 @@ if test -z "$show_help"; then
   case "$mode" in
   # libtool compile mode
   compile)
+    progname="$progname: compile"
     # Get the compilation command and the source file.
     base_compile="$nonopt"
     lastarg=
@@ -271,6 +275,7 @@ if test -z "$show_help"; then
 
   # libtool link mode
   link)
+    progname="$progname: link"
     # Go through the arguments, transforming them on the way.
     cc="$nonopt"
     args="$cc"
@@ -279,6 +284,8 @@ if test -z "$show_help"; then
     compile_shlibpath=
     finalize_shlibpath=
     deplibs=
+    export_dynamic=no
+    hardcode_libdirs=
     install_libdir=
     libobjs=
     link_against_libtool_libs=
@@ -290,14 +297,7 @@ if test -z "$show_help"; then
     prevarg=
     temp_rpath=
     vinfo=
-
-
-#    FIXME Maybe set the library names to libNAME_p.a if we are doing profiling.
-#    if echo " $@ " | egrep "[ 	]$profile_flag_pattern[	 ]" > /dev/null 2>&1; then
-#      suffix=p
-#    else
-#      suffix=
-#    fi
+    whole_archive=no
 
     # We need to know -static, to get the right output filenames.
     case " $@ " in
@@ -310,13 +310,8 @@ if test -z "$show_help"; then
       if test -n "$prev"; then
 	case "$prev" in
 	output)
-	  if test "$build_libtool_libs" = yes; then
-	    compile_command="$compile_command $objdir/$arg"
-	    finalize_command="$finalize_command $objdir/$arg"T
-	  else
-	    compile_command="$compile_command $arg"
-	    finalize_command="$finalize_command $arg"
-	  fi
+	  compile_command="$compile_command @OUTPUT@"
+	  finalize_command="$finalize_command @OUTPUT@"
 	  args="$args $arg"
 	  ;;
 	esac
@@ -331,6 +326,13 @@ if test -z "$show_help"; then
       prevarg="$arg"
 
       case "$arg" in
+      -export-dynamic)
+	export_dynamic=yes
+	compile_command="$compile_command $export_dynamic_flag"
+	finalize_command="$finalize_command $export_dynamic_flag"
+	continue
+	;;
+
       -L*)
 	dir=`echo "$arg" | sed 's%^-L\(.*\)$%\1%'`
 	case "$dir" in
@@ -345,6 +347,8 @@ if test -z "$show_help"; then
 	;;
 
       -l*) deplibs="$deplibs $arg" ;;
+
+      -no-whole-archive) whole_archive=no ;;
 
       -o) prev=output ;;
 
@@ -370,11 +374,51 @@ if test -z "$show_help"; then
 	continue
 	;;
 
+      -whole-archive) whole_archive=yes ;;
+
       -*) cc="$cc $arg" ;; # Some other compiler flag.
 
-      *.o | *.a)
+      *.o)
 	# A standard object.
 	objs="$objs $arg"
+	;;
+
+      *.a)
+	# Find the relevant object directory and library name.
+	file=`echo "$arg" | sed 's%^.*/%%'`
+	dir=`echo "$arg" | sed 's%/[^/]*$%/%'`
+	test "$dir" = "$arg" && dir=
+
+	# If -whole-archive was specified, we need to link all the members.
+	if test "$whole_archive" = yes; then
+	  if test -f $arg; then :
+	  else
+	    echo "$progname: \`$arg' does not exist" 1>&2
+	    echo "$help" 1>&2
+	    exit 1
+	  fi
+
+	  # Get the names of the members of the archive.
+	  members=`$AR t $arg 2>/dev/null`
+	  for m in $members; do
+	    case "$m" in
+	    *.lo) libobjs="$libobjs $dir$m" ;;
+	    *.o)
+	      if test "$build_libtool_libs" = yes; then
+		objs="$objs $dir$m"
+	      else
+		libobjs="$libobjs $dir$m"
+	      fi
+	      ;;
+	    esac
+	  done
+	elif test -f "$dir$objdir/$file"; then
+	  # .libs/libfoo.a exists, so this is an archive of libobjects.
+	  libobjs="$libobjs $arg"
+	else
+	  # Standard archive.
+	  objs="$objs $arg"
+	fi
 	;;
 
       *.lo)
@@ -439,9 +483,23 @@ if test -z "$show_help"; then
 	  fi
 
 	  if test -n "$hardcode_libdir_flag_spec"; then
-	    hardcode_libdir_flag=`eval echo \"$hardcode_libdir_flag_spec\"`
-	    compile_command="$compile_command $hardcode_libdir_flag"
-	    finalize_command="$finalize_command $hardcode_libdir_flag"
+	    if test -n "$hardcode_libdir_separator"; then
+	      if test -z "$hardcode_libdirs"; then
+		# Put the magic libdir with the hardcode flag.
+		hardcode_libdirs="$libdir"
+		libdir="@HARDCODE_LIBDIRS@"
+	      else
+		# Just accumulate the libdirs.
+		hardcode_libdirs="$hardcode_libdirs$hardcode_libdir_separator$libdir"
+		libdir=
+	      fi
+	    fi
+
+	    if test -n "$libdir"; then
+	      hardcode_libdir_flag=`eval echo \"$hardcode_libdir_flag_spec\"`
+	      compile_command="$compile_command $hardcode_libdir_flag"
+	      finalize_command="$finalize_command $hardcode_libdir_flag"
+	    fi
 	  fi
 
 	  case "$hardcode_action" in
@@ -500,8 +558,9 @@ if test -z "$show_help"; then
 	  fi
         else
           # Transform directly to old archives if we don't build new libraries.
-          compile_command="$compile_command $dir/$old_library"
-	  finalize_command="$finalize_command $dir/$old_library"
+	  test -z "$old_library" || linklib="$old_library"
+          compile_command="$compile_command $dir/$linklib"
+	  finalize_command="$finalize_command $dir/$linklib"
         fi
 	continue
 	;;
@@ -523,6 +582,12 @@ if test -z "$show_help"; then
       exit 1
     fi
 
+    # Substitute the hardcoded libdirs into the compile commands.
+    if test "$hardcode_libdir_colon_separated" = yes; then
+      compile_command=`echo "$compile_command" | sed "s%@HARDCODE_LIBDIRS@%$hardcode_libdirs%g"`
+      finalize_command=`echo "$finalize_command" | sed "s%@HARDCODE_LIBDIRS@%$hardcode_libdirs%g"`
+    fi
+
     oldlib=
     oldobjs=
     case "$output" in
@@ -539,6 +604,7 @@ if test -z "$show_help"; then
 
     *.a)
       # Old archive.
+      libname=`echo "$output" | sed 's/\.a$//'`
       build_old_libs=yes
 
       if test -n "$install_libdir"; then
@@ -553,14 +619,22 @@ if test -z "$show_help"; then
     *.la)
       libname=`echo "$output" | sed 's/\.la$//'`
 
+      # All the library-specific variables (install_libdir is set above).
+      library_names=
+      old_library=
+      dlname=
+      current=0
+      revision=0
+      age=0
+
       if test -n "$objs"; then
-	echo "$progname: cannot build libtool library \`$output' from non-libtool objects"
+	echo "$progname: cannot build libtool library \`$output' from non-libtool objects:$objs" 2>&1
 	exit 1
       fi
 
       # How the heck are we supposed to write a wrapper for a shared library?
       if test -n "$link_against_libtool_libs"; then
-        echo "$progname: libtool libraries may not depend on uninstalled libraries" 1>&2
+        echo "$progname: libtool library \`$output' may not depend on uninstalled libraries:$link_against_libtool_libs" 1>&2
 	exit 1
       fi
 
@@ -568,10 +642,6 @@ if test -z "$show_help"; then
 	echo "$progname: you must specify an installation directory with \`-rpath'" 1>&2
 	exit 1
       fi
-
-      current=0
-      revision=0
-      age=0
 
       # Parse the version information argument.
       IFS="${IFS= 	}"; save_ifs="$IFS"; IFS=':'
@@ -711,6 +781,12 @@ if test -z "$show_help"; then
 	  $show "$ln_s $realname $link"
 	  $run $ln_s $realname $link || exit $?
 	done
+
+	# If -export-dynamic was specified, set the dlname.
+	if test "$export_dynamic" = yes; then
+	  # On all known operating systems, these are identical.
+	  dlname="$soname"
+	fi
       fi
       ;;
 
@@ -750,8 +826,10 @@ if test -z "$show_help"; then
       # Delete the old objects.
       $run $rm $obj $libobj
 
-      # Create the old-style object.
-      reload_objs="$objs"`echo "$libobjs " | sed 's/\.lo /.o /g; s/ $//g'`
+      # Create the old-style object (skipping any convenience libraries).
+      # FIXME: skipping them is simplistic.  We should determine which members
+      # are actually needed to resolve symbols.
+      reload_objs="$objs"`echo "$libobjs " | sed 's/[^ 	]*\.a //g; s/\.lo /.o /g; s/ $//g'`
 
       output="$obj"
       cmds=`eval echo \"$reload_cmds\"`
@@ -801,14 +879,11 @@ if test -z "$show_help"; then
 	compile_command=`echo "$compile_command " | sed 's/\.lo /.o /g; s/ $//'`
       fi
 
-      # Create the binary in the object directory, then wrap it.
-      if test -d $objdir; then :
-      else
-        $show "$mkdir $objdir"
-        $run $mkdir $objdir || exit $?
-      fi
-
       if test -z "$link_against_libtool_libs" || test "$build_libtool_libs" != yes; then
+	# Replace the output file specification.
+	compile_command=`echo "$compile_command" | sed "s%@OUTPUT@%$output%g"`
+	finalize_command=`echo "$finalize_command" | sed "s%@OUTPUT@%$output%g"`
+
 	# We have no uninstalled library dependencies, so finalize right now.
 	$show "$compile_command"
 	$run $compile_command
@@ -823,6 +898,17 @@ if test -z "$show_help"; then
 	  status=$?
 	fi
 	exit $status
+      fi
+
+      # Replace the output file specification.
+      compile_command=`echo "$compile_command" | sed "s%@OUTPUT@%$objdir/$output%g"`
+      finalize_command=`echo "$finalize_command" | sed "s%@OUTPUT@%$objdir/$output"T"%g`
+
+      # Create the binary in the object directory, then wrap it.
+      if test -d $objdir; then :
+      else
+        $show "$mkdir $objdir"
+        $run $mkdir $objdir || exit $?
       fi
 
       if test -n "$shlibpath_var"; then
@@ -948,19 +1034,21 @@ EOF
 
     # See if we need to build an old-fashioned archive.
     if test "$build_old_libs" = "yes"; then
-      # Transform .lo files to .o
-      oldobjs="$objs"`echo "$libobjs " | sed 's/\.lo /.o /g; s/ $//g'`
-      case "$output" in
-      *.la)
-	# Now set the variables for building old libraries.
-	oldlib="$objdir/$libname.a"
-	;;
-      *)
-	oldlib="$output"
+      # Now set the variables for building old libraries.
+      oldlib="$objdir/$libname.a"
+
+      # Transform .lo files to .o (skipping convenience libraries).
+      # FIXME: skipping them is simplistic.  We should determine which members
+      # are actually needed to resolve symbols.
+      oldobjs="$objs"`echo "$libobjs " | sed 's/[^ 	]*\.a //g; s/\.lo /.o /g; s/ $//g'`
+
+      if test -d "$objdir"; then
 	$show "$rm $oldlib"
 	$run $rm $oldlib
-	;;
-      esac
+      else
+	$show "$mkdir $objdir"
+	$run $mkdir $objdir
+      fi
 
       # Do each command in the archive commands.
       cmds=`eval echo \"$old_archive_cmds\"`
@@ -971,6 +1059,38 @@ EOF
 	eval "$run $cmd" || exit $?
       done
       IFS="$save_ifs"
+
+      case "$output" in
+      *.a)
+	# Just move into place if there were any non-libtool objects.
+	if test -n "$objs"; then
+	  $show "$mv $oldlib $output"
+	  $run $mv $oldlib $output
+
+	elif test -z "$pic_flag" || test "$build_libtool_libs" != yes; then
+	  # Just symlink if libtool objects are the same.
+	  $show "$rm $output"
+	  $run $rm $output
+	  $show "$ln_s $oldlib $output"
+	  $run $ln_s $oldlib $output
+
+	else
+	  # Create an archive of libtool objects.
+	  oldlib="$output"
+	  oldobjs="$libobjs"
+
+	  # Do each command in the archive commands.
+	  cmds=`eval echo \"$old_archive_cmds\"`
+	  IFS="${IFS= 	}"; save_ifs="$IFS"; IFS=';'
+	  for cmd in $cmds; do
+	    IFS="$save_ifs"
+	    $show "$cmd"
+	    eval "$run $cmd" || exit $?
+	  done
+	  IFS="$save_ifs"
+	fi
+	;;
+      esac
     fi
 
     # Now create the libtool archive.
@@ -993,6 +1113,9 @@ library_names='$library_names'
 # The name of the static archive.
 old_library='$old_library'
 
+# The name that we can dlopen(3).
+dlname='$dlname'
+
 # Version information for $libname.
 current=$current
 age=$age
@@ -1009,6 +1132,7 @@ EOF
 
   # libtool install mode
   install)
+    progname="$progname: install"
 
     # The first argument is the name of the installation program.
     install_prog="$nonopt"
@@ -1151,6 +1275,7 @@ EOF
 	  # Install the shared library and build the symlinks.
 	  $show "$install_prog $dir/$realname $destdir/$realname"
 	  eval "$run $install_prog $dir/$realname $destdir/$realname" || exit $?
+	  test "X$dlname" = "X$realname" && dlname=
 
 	  # Support stripping libraries.
 	  if test -n "$stripme"; then
@@ -1175,9 +1300,16 @@ EOF
 	    # ... and create new ones.
 	    for linkname
 	    do
+	      test "X$dlname" = "X$linkname" && dlname=
 	      $show "$ln_s $realname $destdir/$linkname"
 	      $run $ln_s $realname $destdir/$linkname
 	    done
+	  fi
+
+	  if test -n "$dlname"; then
+	    # Install the dynamically-loadable library.
+	    $show "$install_prog $dir/$dlname $destdir/$dlname"
+	    eval "$run $install_prog $dir/$dlname $destdir/$dlname" || exit $?
 	  fi
 
 	  # Do each command in the postinstall commands.
@@ -1273,15 +1405,6 @@ EOF
       esac
     done
 
-# FIXME Install any profiled libraries, too.
-#    newfiles=
-#    for file in $staticlibs; do
-#      newfiles="$newfiles $file"
-#      pfile=`echo "$file" | sed 's/\.a$/_p.a/'`
-#      test -f "$pfile" && newfiles="$newfiles $pfile"
-#    done
-#    staticlibs="$newfiles"
-
     for file in $staticlibs; do
       name=`echo "$file" | sed 's%^.*/%%'`
 
@@ -1326,8 +1449,51 @@ EOF
     exit 0
     ;;
 
+  # libtool dlname mode
+  dlname)
+    progname="$progname: dlname"
+    ltlibs="$nonopt"
+    for lib
+    do
+      ltlibs="$ltlibs $lib"
+    done
+
+    # Now check to make sure each one is a valid libtool library.
+    status=0
+    for lib in $ltlibs; do
+      dlname=
+      libdir=
+
+      # Check to see that this really is a libtool archive.
+      if egrep "^# Generated by $PROGRAM" $arg >/dev/null 2>&1; then :
+      else
+        echo "$progname: \`$arg' is not a valid libtool archive" 1>&2
+	status=1
+	continue
+      fi
+
+      # If there is no directory component, then add one.
+      case "$arg" in
+      */*) . $arg ;;
+      *) . ./$arg ;;
+      esac
+
+      if test -z "$libdir"; then
+        echo "$progname: \`$arg' contains no -rpath information" 1>&2
+        status=1
+      elif test -n "$dlname"; then
+	echo "$libdir/$dlname"
+      else
+        echo "$progname: \`$arg' was not linked with \`-export-dynamic'" 1>&2
+        status=1
+      fi
+    done
+    exit $status
+    ;;
+
   # libtool finish mode
   finish)
+    progname="$progname: finish"
     libdirs="$nonopt"
 
     if test -n "$finish_cmds" && test -n "$libdirs"; then
@@ -1359,6 +1525,7 @@ EOF
 
   # libtool uninstall mode
   uninstall)
+    progname="$progname: uninstall"
     rm="$nonopt"
     files=
 
@@ -1381,6 +1548,8 @@ EOF
       test "$dir" = "$file" && dir=.
       name=`echo "$file" | sed -e 's%^.*/%%'`
 
+      rmfiles="$file"
+
       case "$name" in
       *.la)
 	# Possibly a libtool archive, so verify it.
@@ -1389,21 +1558,19 @@ EOF
 
 	  # Delete the libtool libraries and symlinks.
 	  for n in $library_names; do
-	    $show "$rm $dir/$n"
-	    $run $rm $dir/$n
+	    rmfiles="$rmfiles $dir/$n"
+	    test "X$n" = "X$dlname" && dlname=
 	  done
+	  test -n "$dlname" && rmfiles="$rmfiles $dir/$dlname"
+	  test -n "$old_library" && rmfiles="$rmfiles $dir/$old_library"
 
-	  # Delete the old-fashioned archive.
-	  if test -n "$old_library"; then
-	    $show "$rm $dir/$old_library"
-	    $run $rm $dir/$old_library
-	  fi
+	  # FIXME: should reinstall the best remaining shared library.
 	fi
 	;;
       esac
 
-      $show "$rm $file"
-      $run $rm $file
+      $show "$rm $rmfiles"
+      $run $rm $rmfiles
     done
     exit 0
     ;;
@@ -1437,6 +1604,7 @@ Provide generalized library-building support services.
 MODE must be one of the following:
 
       compile         compile a source file into a libtool object
+      dlname          print filenames to use to \`dlopen' libtool libraries
       finish          complete the installation of libtool libraries
       install         install libraries or executables
       link            create a library or an executable
@@ -1459,6 +1627,19 @@ from the given SOURCEFILE.
 The output file name is determined by removing the directory component from
 SOURCEFILE, then substituting the C source code suffix \`.c' with the
 library object suffix, \`.lo'.
+EOF
+  ;;
+
+dlname)
+  cat <<EOF
+Usage: $progname [OPTION]... --mode=dlname LTLIBRARY [LTLIBRARY]...
+
+Print filenames to use to \`dlopen' libtool libraries.
+
+Each LTLIBRARY is the name of a dynamically loadable libtool library (one that
+was linked using the \`-export-dynamic' option).
+
+The names to use are printed to standard output, one per line.
 EOF
   ;;
 
@@ -1501,13 +1682,16 @@ a program from several object files.
 
 The following components of LINK-COMMAND are treated specially:
 
-  -LLIBDIR        search LIBDIR for required installed libraries
-  -lNAME          OUTPUT-FILE requires the installed library libNAME
-  -o OUTPUT-FILE  create OUTPUT-FILE from the specified objects
-  -rpath LIBDIR   the created library will eventually be installed in LIBDIR
-  -static         do not do any dynamic linking or shared library creation
+  -export-dynamic   allow the output file to be loaded with dlopen(3)
+  -LLIBDIR          search LIBDIR for required installed libraries
+  -lNAME            OUTPUT-FILE requires the installed library libNAME
+  -no-whole-archive turn off \`-whole-archive'
+  -o OUTPUT-FILE    create OUTPUT-FILE from the specified objects
+  -rpath LIBDIR     the created library will eventually be installed in LIBDIR
+  -static           do not do any dynamic linking or shared library creation
   -version-info CURRENT[:REVISION[:AGE]]
-		  specify library version info [each variable defaults to 0]
+		    specify library version info [each variable defaults to 0]
+  -whole-archive    use all members from subsequent \`.a' files
 
 All other options (arguments beginning with \`-') are ignored.
 
@@ -1519,7 +1703,8 @@ If the OUTPUT-FILE ends in \`.la', then a libtool library is created, only
 library objects (\`.lo' files) may be specified, and \`-rpath' is required.
 
 If OUTPUT-FILE ends in \`.a', then a standard library is created using \`ar'
-and \`ranlib'.
+and \`ranlib'.  If only libtool objects are specified, then the output file
+may be used in the creation of other libtool archives.
 
 If OUTPUT-FILE ends in \`.lo' or \`.o', then a reloadable object file is
 created, otherwise an executable program is created.
