--- a/ltmain.in
+++ b/ltmain.in
@@ -616,7 +616,6 @@ compiler."
     avoid_version=no
     dlfiles=
     dlprefiles=
-    dlpredeps=
     export_dynamic=no
     export_symbols=
     generated=
@@ -976,7 +975,8 @@ compiler."
 	  else
 	    # We should not create a dependency on this library, but we
 	    # may need any libraries it requires.
-	    dlpredeps="$dlpredeps$dependency_libs"
+	    compile_command="$compile_command$dependency_libs"
+	    finalize_command="$finalize_command$dependency_libs"
 	    prev=
 	    continue
 	  fi
@@ -2049,10 +2049,6 @@ static const void *lt_preloaded_setup() {
 	compile_command=`$echo "X$compile_command" | $Xsed -e 's%@OUTPUT@%'"$output"'%g'`
 	finalize_command=`$echo "X$finalize_command" | $Xsed -e 's%@OUTPUT@%'"$output"'%g'`
 
-	# Append dependencies from dlopened modules
-	compile_command="$compile_command$dlpredeps"
-	finalize_command="$finalize_command$dlpredeps"
-
 	# We have no uninstalled library dependencies, so finalize right now.
 	$show "$compile_command"
 	$run eval "$compile_command"
@@ -2062,10 +2058,6 @@ static const void *lt_preloaded_setup() {
       # Replace the output file specification.
       compile_command=`$echo "X$compile_command" | $Xsed -e 's%@OUTPUT@%'"$output_objdir/$outputname"'%g'`
       finalize_command=`$echo "X$finalize_command" | $Xsed -e 's%@OUTPUT@%'"$output_objdir/$outputname"'T%g'`
-
-      # Append dependencies from dlopened modules
-      compile_command="$compile_command$dlpredeps"
-      finalize_command="$finalize_command$dlpredeps"
 
       # Create the binary in the object directory, then wrap it.
       if test ! -d $output_objdir; then
