--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1644,7 +1644,7 @@ beos*)
 
 bsdi4*)
   version_type=linux
-  library_names_spec='${libname}.so.$major ${libname}.so'
+  library_names_spec='${libname}.so$major ${libname}.so'
   soname_spec='${libname}.so'
   finish_cmds='PATH="$PATH:/sbin" ldconfig $libdir'
   shlibpath_var=LD_LIBRARY_PATH
@@ -1738,12 +1738,12 @@ linux-gnu*)
 netbsd*)
   version_type=sunos
   if echo __ELF__ | $CC -E - | grep __ELF__ >/dev/null; then
-    library_names_spec='${libname}${release}.so.$versuffix'
+    library_names_spec='${libname}${release}.so$versuffix'
     finish_cmds='PATH="$PATH:/sbin" ldconfig -m $libdir'
     dynamic_linker='NetBSD (a.out) ld.so'
   else
-    library_names_spec='${libname}${release}.so.$versuffix ${libname}${release}.so.$major ${libname}${release}.so'
-    soname_spec='${libname}${release}.so.$major'
+    library_names_spec='${libname}${release}.so$versuffix ${libname}${release}.so$major ${libname}${release}.so'
+    soname_spec='${libname}${release}.so$major'
     dynamic_linker='NetBSD ld.elf_so'
   fi
   shlibpath_var=LD_LIBRARY_PATH
@@ -1815,8 +1815,8 @@ sysv4.2uw2* | sysv4.3* | sysv5*)
 
 uts4*)
   version_type=linux
-  library_names_spec='${libname}${release}.so.$versuffix ${libname}${release}.so.$major $libname.so'
-  soname_spec='${libname}${release}.so.$major'
+  library_names_spec='${libname}${release}.so.$versuffix ${libname}${release}.so$major $libname.so'
+  soname_spec='${libname}${release}.so$major'
   shlibpath_var=LD_LIBRARY_PATH
   ;;
 
